--- a/hebrew.html
+++ b/hebrew.html
@@ -33,7 +33,7 @@
           <nav class="nav">
             <ul>
               <li class="nav-item">
-                <a href="https://shehabbakery-menu.online/">בית</a>
+                <a href="https://kurtoshfa-menu.com">בית</a>
               </li>
               <li class="nav-item"><a href="hebrew">תפריט</a></li>
               <li class="nav-item"><a href="hebrewContact">צור קשר</a></li>
