--- a/hebrewContact.html
+++ b/hebrewContact.html
@@ -1,79 +1,88 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
+  <head>
+    <title>Kurtos</title>
+    <link rel="icon" href="img/kurtos-logo.png" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="css/font-awesome.css" />
+    <link rel="stylesheet" href="css/aos.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<head>
-  <title>Kurtos</title>
-  <link rel="icon" href="img/kurtos-logo.png">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/font-awesome.css">
-  <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <body>
+    <!-- page loader start -->
+    <div class="page-loader"></div>
+    <!-- page loader end -->
 
-<body>
-
-  <!-- page loader start -->
-  <div class="page-loader"></div>
-  <!-- page loader end -->
-
-  <!-- header start -->
-  <header class="header">
-    <div class="container">
-      <div class="row justify-content-between align-items-center">
-        <div class="logo">
-          <a href="index.html"><img src="img/kurtos-logo.png" alt="logo"></a>
+    <!-- header start -->
+    <header class="header">
+      <div class="container">
+        <div class="row justify-content-between align-items-center">
+          <div class="logo">
+            <a href="index.html"
+              ><img src="img/kurtos-logo.png" alt="logo"
+            /></a>
+          </div>
+          <button type="button" class="nav-toggler">
+            <span></span>
+          </button>
+          <nav class="nav">
+            <ul>
+              <li class="nav-item">
+                <a href="https://kurtoshfa-menu.com/">בית</a>
+              </li>
+              <li class="nav-item"><a href="hebrew">תפריט</a></li>
+              <li class="nav-item"><a href="hebrewContact">צור קשר</a></li>
+            </ul>
+          </nav>
         </div>
-        <button type="button" class="nav-toggler">
-          <span></span>
-        </button>
-        <nav class="nav">
-          <ul>
-            <li class="nav-item"><a href="https://kurtoshfa-menu.com/">בית</a></li>
-            <li class="nav-item"><a href="hebrew">תפריט</a></li>
-            <li class="nav-item"><a href="hebrewContact">צור קשר</a></li>
-          </ul>
-        </nav>
       </div>
-    </div>
-  </header>
-  <!-- header end -->
+    </header>
+    <!-- header end -->
 
-  <!-- footer start -->
-  <footer class="footer" id="footer">
-    <div class="container">
-      <div class="row">
-        <div class="footer-item" data-aos="fade-up">
-          <h3>מיקום</h3>
-          <p>שפרעם</p>
-          <div class="social-links">
-            <a href="https://waze.com/ul/hsvc48762v"><i class="fab fa-waze" style="font-size:36px"></i></a>
+    <!-- footer start -->
+    <footer class="footer" id="footer">
+      <div class="container">
+        <div class="row">
+          <div class="footer-item" data-aos="fade-up">
+            <h3>מיקום</h3>
+            <p>שפרעם</p>
+            <div class="social-links">
+              <a
+                href="https://www.google.com/maps?q=32.8023529052734,35.1685447692871"
+                ><i class="fab fa-waze" style="font-size: 36px"></i
+              ></a>
+            </div>
+          </div>
+          <div class="footer-item" data-aos="fade-up">
+            <h3>שעות עבודה</h3>
+            <p>
+              שני - שבת<br />
+              11:00 - 23:00
+            </p>
+          </div>
+          <div class="footer-item" data-aos="fade-up">
+            <h3>צור קשר</h3>
+            <p><a href="tel:04-6748084">04-6748084</a></p>
+            <div class="social-links">
+              <a href="https://www.instagram.com/kurtoshfa/"
+                ><i class="fab fa-instagram" style="font-size: 36px"></i
+              ></a>
+            </div>
           </div>
         </div>
-        <div class="footer-item" data-aos="fade-up">
-          <h3>שעות עבודה</h3>
-          <p>שני - שבת<br> 7:00 - 21:30</p>
-        </div>
-        <div class="footer-item" data-aos="fade-up">
-          <h3>צור קשר</h3>
-          <p><a href="tel:04-">04-</a></p>
-          <div class="social-links">
-            <a href="https://www.instagram.com/kurtoshfa/"><i class="fab fa-instagram"
-                style="font-size:36px"></i></a>
+        <div class="spacer"></div>
+        <div class="row">
+          <div class="copyright">
+            &copy; 2025 - Powered by
+            <a href="https://web-reflect.com/">Web Reflect</a>
           </div>
         </div>
       </div>
-      <div class="spacer"></div>
-      <div class="row">
-        <div class="copyright">
-          &copy; 2025 - Powered by <a href="https://web-reflect.com/">Web Reflect</a>
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- footer end -->
-  <script src="js/aos.js"></script>
-  <script src="js/script.js"></script>
-</body>
-
+    </footer>
+    <!-- footer end -->
+    <script src="js/aos.js"></script>
+    <script src="js/script.js"></script>
+  </body>
 </html>
