--- a/hebrewContact.html
+++ b/hebrewContact.html
@@ -20,7 +20,7 @@
       <div class="container">
         <div class="row justify-content-between align-items-center">
           <div class="logo">
-            <a href="index.html"
+            <a href="https://kurtoshfa-menu.com/"
               ><img src="img/kurtos-logo.png" alt="logo"
             /></a>
           </div>
