kurtosh photos and order fix

--- a/hebrew.html
+++ b/hebrew.html
@@ -103,21 +103,22 @@
         <div class="row menu-tab-content active" id="dessert">
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
+              <img
+                src="img/menu/shutterstock_1196773342_edited.png"
+                alt="menu item thumbnail"
+              />
+              <h2>קיורטוש קלאסי</h2>
+            </div>
+            <div class="disc">קיורטוש מצופה סוכר עם תוספת ממרח לבחירה</div>
+            <div class="menu-item-price">₪33</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-left">
+            <div class="menu-item-title">
               <img src="img/menu/cinammon.png" alt="menu item thumbnail" />
               <h2>קיורטוש קינמון</h2>
             </div>
             <div class="disc">קיורטוש מצופה קינמון עם תוספת ממרח לבחירה</div>
             <div class="menu-item-price">₪33</div>
-          </div>
-          <div class="menu-item" data-aos="fade-up-left">
-            <div class="menu-item-title">
-              <img src="img/menu/dubai.png" alt="menu item thumbnail" />
-              <h2>קיורטוש דובאי</h2>
-            </div>
-            <div class="disc">
-              קיורטוש מצופה פיסטוק עם תוספת ממרח פיסטוק כנאפה וגלידה
-            </div>
-            <div class="menu-item-price">₪55</div>
           </div>
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
@@ -127,7 +128,27 @@
             <div class="disc">קיורטוש מצופה קוקוס עם תוספת ממרח לבחירה</div>
             <div class="menu-item-price">₪33</div>
           </div>
+          <div class="menu-item" data-aos="fade-up-left">
+            <div class="menu-item-title">
+              <img src="img/menu/sprinkles.png" alt="menu item thumbnail" />
+              <h2>קיורטוש סוכריות צבעוניות</h2>
+            </div>
+            <div class="disc">
+              קיורטוש מצופה סוכריות צבעוניות עם תוספת ממרח לבחירה
+            </div>
+            <div class="menu-item-price">₪33</div>
+          </div>
           <div class="menu-item" data-aos="fade-up-right">
+            <div class="menu-item-title">
+              <img src="img/menu/dubai.png" alt="menu item thumbnail" />
+              <h2>קיורטוש דובאי</h2>
+            </div>
+            <div class="disc">
+              קיורטוש מצופה פיסטוק עם תוספת ממרח פיסטוק כנאפה וגלידה
+            </div>
+            <div class="menu-item-price">₪55</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
               <img
                 src="img/menu/final oreo kurtos.png"
@@ -140,7 +161,7 @@
             </div>
             <div class="menu-item-price">₪47</div>
           </div>
-          <div class="menu-item" data-aos="fade-up-left">
+          <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
               <img src="img/menu/marshmellow.png" alt="menu item thumbnail" />
               <h2>קיורטוש מארשמלו</h2>
@@ -150,27 +171,6 @@
             </div>
             <div class="menu-item-price">₪47</div>
           </div>
-          <div class="menu-item" data-aos="fade-up-left">
-            <div class="menu-item-title">
-              <img src="img/menu/sprinkles.png" alt="menu item thumbnail" />
-              <h2>קיורטוש סוכריות צבעוניות</h2>
-            </div>
-            <div class="disc">
-              קיורטוש מצופה סוכריות צבעוניות עם תוספת ממרח לבחירה
-            </div>
-            <div class="menu-item-price">₪33</div>
-          </div>
-          <div class="menu-item" data-aos="fade-up-left">
-            <div class="menu-item-title">
-              <img
-                src="img/menu/shutterstock_1196773342_edited.png"
-                alt="menu item thumbnail"
-              />
-              <h2>קיורטוש קלאסי</h2>
-            </div>
-            <div class="disc">קיורטוש מצופה סוכר עם תוספת ממרח לבחירה</div>
-            <div class="menu-item-price">₪33</div>
-          </div>
         </div>
         <!-- dessert end -->
 
@@ -178,14 +178,20 @@
         <div class="row menu-tab-content" id="special-morning">
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
-              <img src="img/menu/nutellapng.parspng.com_.png" alt="menu item thumbnail" />
+              <img
+                src="img/menu/nutellapng.parspng.com_.png"
+                alt="menu item thumbnail"
+              />
               <h2>נוטלה</h2>
             </div>
             <div class="menu-item-price">₪3</div>
           </div>
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
-              <img src="img/menu/White-Chocolate-Spread.webp" alt="menu item thumbnail" />
+              <img
+                src="img/menu/White-Chocolate-Spread.webp"
+                alt="menu item thumbnail"
+              />
               <h2>שוקולד לבן</h2>
             </div>
             <div class="menu-item-price">₪3</div>
@@ -317,10 +323,7 @@
           </div>
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img
-                src="img/menu/xl.jpg"
-                alt="menu item thumbnail"
-              />
+              <img src="img/menu/xl.jpg" alt="menu item thumbnail" />
               <h2>XL</h2>
             </div>
             <div class="menu-item-price">₪8</div>
