extras photos fix

--- a/hebrew.html
+++ b/hebrew.html
@@ -189,7 +189,7 @@
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
               <img
-                src="img/menu/White-Chocolate-Spread.webp"
+                src="img/menu/White-Chocolate-Spread.png"
                 alt="menu item thumbnail"
               />
               <h2>שוקולד לבן</h2>
@@ -198,21 +198,21 @@
           </div>
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
-              <img src="img/menu/lotos.jpg" alt="menu item thumbnail" />
+              <img src="img/menu/lutos.png" alt="menu item thumbnail" />
               <h2>לוטוס</h2>
             </div>
             <div class="menu-item-price">₪3</div>
           </div>
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img src="img/menu/kinder.avif" alt="menu item thumbnail" />
+              <img src="img/menu/kinder.png" alt="menu item thumbnail" />
               <h2>קינדר</h2>
             </div>
             <div class="menu-item-price">₪3</div>
           </div>
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img src="img/menu/marsh.avif" alt="menu item thumbnail" />
+              <img src="img/menu/marsh.png" alt="menu item thumbnail" />
               <h2>מארשמלו</h2>
             </div>
             <!-- <div class="disc"></div> -->
