drinks photos fix

--- a/hebrew.html
+++ b/hebrew.html
@@ -302,42 +302,42 @@
         <div class="row menu-tab-content" id="cold-drinks">
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img src="img/menu/cola.webp" alt="menu item thumbnail" />
+              <img src="img/menu/cola.png" alt="menu item thumbnail" />
               <h2>קולה</h2>
             </div>
             <div class="menu-item-price">₪8</div>
           </div>
-          <div class="menu-item" data-aos="fade-up-left">
+          <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
-              <img src="img/menu/zero.webp" alt="menu item thumbnail" />
+              <img src="img/menu/zero.png" alt="menu item thumbnail" />
               <h2>קולה זירו</h2>
             </div>
             <div class="menu-item-price">₪8</div>
           </div>
-          <div class="menu-item" data-aos="fade-up-right">
+          <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img src="img/menu/soda.jpg" alt="menu item thumbnail" />
+              <img src="img/menu/soda.png" alt="menu item thumbnail" />
               <h2>סודה</h2>
             </div>
             <div class="menu-item-price">₪8</div>
           </div>
+          <div class="menu-item" data-aos="fade-up-right">
+            <div class="menu-item-title">
+              <img src="img/menu/xl.png" alt="menu item thumbnail" />
+              <h2>XL</h2>
+            </div>
+            <div class="menu-item-price">₪8</div>
+          </div>
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img src="img/menu/xl.jpg" alt="menu item thumbnail" />
-              <h2>XL</h2>
+              <img src="img/menu/totbnana.png" alt="menu item thumbnail" />
+              <h2>תות בננה</h2>
             </div>
             <div class="menu-item-price">₪8</div>
           </div>
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
-              <img src="img/menu/totbnana.gif" alt="menu item thumbnail" />
-              <h2>תות בננה</h2>
-            </div>
-            <div class="menu-item-price">₪8</div>
-          </div>
-          <div class="menu-item" data-aos="fade-up-left">
-            <div class="menu-item-title">
-              <img src="img/menu/water.jpg" alt="menu item thumbnail" />
+              <img src="img/menu/water.png" alt="menu item thumbnail" />
               <h2>מים</h2>
             </div>
             <div class="menu-item-price">₪8</div>
