hot drinks update

--- a/hebrew.html
+++ b/hebrew.html
@@ -269,6 +269,48 @@
           </div>
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
+              <img src="img/menu/americano.webp" alt="menu item thumbnail" />
+              <h2>אמריקנו</h2>
+            </div>
+            <div class="menu-item-price">₪11</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-left">
+            <div class="menu-item-title">
+              <img src="img/menu/macchiato.webp" alt="menu item thumbnail" />
+              <h2>מקיאטו</h2>
+            </div>
+            <div class="menu-item-price">₪11</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-right">
+            <div class="menu-item-title">
+              <img src="img/menu/קונפנה.png" alt="menu item thumbnail" />
+              <h2>קונפנה</h2>
+            </div>
+            <div class="menu-item-price">₪12</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-left">
+            <div class="menu-item-title">
+              <img src="img/menu/אפוגטו.png" alt="menu item thumbnail" />
+              <h2>אפוגטו</h2>
+            </div>
+            <div class="menu-item-price">₪14</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-right">
+            <div class="menu-item-title">
+              <img src="img/menu/סחלבjpeg.webp" alt="menu item thumbnail" />
+              <h2>סחלב</h2>
+            </div>
+            <div class="menu-item-price">₪16</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-left">
+            <div class="menu-item-title">
+              <img src="img/menu/צ'אי לאטה.png" alt="menu item thumbnail" />
+              <h2>צ'אי לאטה</h2>
+            </div>
+            <div class="menu-item-price">₪16</div>
+          </div>
+          <div class="menu-item" data-aos="fade-up-right">
+            <div class="menu-item-title">
               <img src="img/menu/hotchocolate.webp" alt="menu item thumbnail" />
               <h2>שוקו חם</h2>
             </div>
@@ -276,17 +318,20 @@
           </div>
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
-              <img src="img/menu/americano.webp" alt="menu item thumbnail" />
-              <h2>אמריקנו</h2>
+              <img
+                src="img/menu/marshmallow hotchocolate.jpg"
+                alt="menu item thumbnail"
+              />
+              <h2>שוקו מרשמלו</h2>
             </div>
-            <div class="menu-item-price">₪11</div>
+            <div class="menu-item-price">₪16</div>
           </div>
           <div class="menu-item" data-aos="fade-up-right">
             <div class="menu-item-title">
-              <img src="img/menu/macchiato.webp" alt="menu item thumbnail" />
-              <h2>מקיאטו</h2>
+              <img src="img/menu/מאטה.png" alt="menu item thumbnail" />
+              <h2>מאטה</h2>
             </div>
-            <div class="menu-item-price">₪11</div>
+            <div class="menu-item-price">₪12</div>
           </div>
           <div class="menu-item" data-aos="fade-up-left">
             <div class="menu-item-title">
